GNOME Bugzilla – Bug 757065
uri: incorrect behavior when merging uris ending in ..
Last modified: 2015-10-27 15:15:39 UTC
According to the algorithm from https://www.ietf.org/rfc/rfc3986.txt, chapter 5.2.4. Remove Dot Segments, the behavior for streams ending in /.. or /../ should be identical. But for current implementation, they aren't. "one/" + "two/../" = "one/" (correct) "one/" + "two/.." = "one" (incorrect. It should be "one/") This leads to "one/" + "two/.." + "three/" = "three/" instead of the expected "one/three/"
Created attachment 314022 [details] [review] unit test reproducing the problem
Created attachment 314023 [details] [review] proposed patch
commit 07902f6ab447046d3ac365d7a961295635d88c3a Author: Florin Apostol <florin.apostol@oregan.net> Date: Sat Oct 24 16:52:44 2015 +0100 uri: fix behaviour for merging uris ending in .. without following / https://bugzilla.gnome.org/show_bug.cgi?id=757065 commit 63fa09fc4d92d035b062e1239da9132cd68a3964 Author: Florin Apostol <florin.apostol@oregan.net> Date: Sat Oct 24 16:43:59 2015 +0100 uri: tests: added unit test for streams ending in .. without following / https://bugzilla.gnome.org/show_bug.cgi?id=757065